# codebase

./: CMakeLists.txt  Makefile  README.md  main.c
.cache/clangd/index/: Codebase.c.8128A133688DCA3F.idx  cmath.c.36504CDEC2ECBC4B.idx  cmath.h.545B916354F9142D.idx  constants.c.D34C4BAAEB9E3E7C.idx  constants.h.E72D2E26A274611B.idx  main.c.DF9AE0E504080D32.idx  trignometry.c.834FB58B04453441.idx  trignometry.h.7899E5CA21E514A9.idx  types.h.76221496A472F88C.idx  vec.c.F0BB7B391059FB44.idx  vec.h.3032496D45CEBFFD.idx
cmathematics/: Makefile  MathLib  cmath.c  cmath.d  cmath.h  constants.c  constants.d  constants.h  main.c  main.d  trignometry.c  trignometry.h  types.h  vec.c
includes/: Codebase.c  cmath.c  constants.c  constants.h  main.c  trignometry.h  vec.h
src/: main.c
src/include/cmathematics/: cmath.h  constants.h
